fix: fix the gap of hero-slider

--- a/assets/css/sections/hero-section.css
+++ b/assets/css/sections/hero-section.css
@@ -96,4 +96,8 @@
     margin-right: 0;
     color: var(--heading-color-secondary);
   }
+
+  .hero-slider {
+    margin-top: 32px;
+  }
 }
